--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -28,4 +28,7 @@ flutter:
       ios:
         pluginClass: AppBadgePlusPlugin
       macos:
+        pluginClass: AppBadgePlusPlugin
+      ohos:
+        package: me.liolin.app_badge_plus
         pluginClass: AppBadgePlusPlugin
